2014-??-??: 3.1.2

	Bugfixes:

	all : properly disallowed usage of super as value
	all : disallowed spaces between >>, >>>, >>= and >>>=
	cpp : fixed bug in side-effect handler which caused incorrect behavior of while loops

	General improvements and optimizations:

	all : cached file exist checks to speed up compilations with a lot of class paths

2014-03-15: 3.1.1

	New features:

	all : added -D deprecation-warnings
	all : allowed \u escape sequences in strings
	cs : implemented haxe.CallStack

	Bugfixes:

	all : fixed wrong handling of "" and null in haxe.io.Path.join
	all : fixed invalid cast-to-self generation on some abstracts
	all : removed @:to Dynamic from UInt to avoid issues in the Map selection algorithm
	all : fixed various issues with UInt
	all : fixed position setter in haxe.io.BytesInput
	all : fixed various issues with member/static extension macros
	flash : fixed invalid override involving single-constraint type parameters
	flash8 : fixed various bugs
	js : fixed a problem with Std.string(null) being optimized incorrectly
	js : fixed custom generators
	cpp : dealt with string literals that are too long for MSVC
	cs : fixed various issues with -net-lib

2014-03-04: 3.1.0

	New features:

	all : allowed null-patterns in pattern matching
	all : allowed extractors in pattern matching using => syntax
	all : allowed extending generic type parameters
	all : allowed (expr : type) syntax (ECheckType)
	all : allowed @:enum and @:forward on abstracts
	all : allowed using abstracts as static extension
	all : allowed Class.new
	all : added EnumValue.match
	all : allow multiple structural extension using { > T1, > T2, fields }
	all : inline array and structure declarations if possible
	cs : added -net-lib
	cs : support for native delegates
	cs : support for attributes
	cs : support for events

	Standard Library:

	all : support abstract types in haxe.rtti.XmlParser
	all : added Std.instance